--- a/Hardhat/hardhat-tutorial/package.json
+++ b/Hardhat/hardhat-tutorial/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "dotenv": "^16.1.4",
     "hardhat": "^2.15.0"
   }
 }
